--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.11",
+    "firebase-functions": "^3.22.0",
     "framer-motion": "^6.3.1",
     "moment": "^2.29.3",
     "next": "12.1.5",
