--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server": "node json-server --watch db.json --port 4000"
+    "server": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
