--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "firebase-functions": "^3.22.0",
     "framer-motion": "^6.3.1",
     "moment": "^2.29.3",
-    "next": "12.1.5",
+    "next": "^12.1.0",
     "node-sass": "^7.0.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.3.1",
