--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "node": "16.x"
   },
   "scripts": {
-    "dev": "next dev",
-    "start": "next start",
-    "lint": "next lint",
-    "server": "json-server --watch db.json --port 4000"
-  },
+    "dev": "react-scripts start",
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
+    },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.8",
@@ -42,6 +44,7 @@
     "reactstrap": "^9.0.2",
     "recoil": "^0.7.2",
     "safe-json-stringify": "^1.2.0",
+    "serve": "^14.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3"
   },
