--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "server": "json-server --watch db.json --port 4000"
     },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
