added build script

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "next dev",
     "start": "next start",
     "lint": "next lint",
+    "build": "next build",
     "server": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
